login button alignment fix

--- a/app/assets/stylesheets/common/base/header.scss
+++ b/app/assets/stylesheets/common/base/header.scss
@@ -37,6 +37,10 @@
     align-items: center;
   }
 
+  .header-buttons {
+    margin-top: .2em;
+  }
+
   .login-button, button.sign-up-button {
     padding: 6px 10px;
     .fa { margin-right: 3px; }
